[gd_scene load_steps=14 format=2]

[ext_resource path="res://Utilities/DialogueSystem.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Windowskins/frlgtextskin.png" type="Texture2D" id=2]
[ext_resource path="res://Utilities/Dialogue Box Text Slide.tres" type="Animation" id=3]
[ext_resource path="res://Fonts/pkmnem.ttf" type="FontFile" id=4]
[ext_resource path="res://Graphics/Pictures/pause.png" type="Texture2D" id=5]
[ext_resource path="res://Utilities/Dialogue Box Arrow.tres" type="Animation" id=6]
[ext_resource path="res://Audio/SE/Choose.WAV" type="AudioStream" id=7]

[sub_resource type="FontFile" id=1]
font_path = "res://Fonts/pkmndpb.ttf"

[sub_resource type="FontFile" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="FontFile" id=3]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=4]
font_path = "res://Fonts/pkmndpb.ttf"

[sub_resource type="FontFile" id=5]
size = 26
font_data = SubResource( 4 )

[sub_resource type="FontFile" id=6]
size = 26
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Box" type="NinePatchRect" parent="."]
process_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -104.0
offset_right = 244.0
offset_bottom = -10.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
region_rect = Rect2( 8, 2, 66, 74 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Box"]
"anims/Slide Text" = ExtResource( 3 )

[node name="Text1" type="RichTextLabel" parent="Box"]
offset_left = 17.0
offset_top = 15.0
offset_right = 462.0
offset_bottom = 50.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "Sample text."
meta_underlined = false
text = "Sample text."
scroll_active = false

[node name="Text2" type="RichTextLabel" parent="Box"]
offset_left = 17.0
offset_top = 50.0
offset_right = 462.0
offset_bottom = 85.0
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
text = "Sample text"
meta_underlined = false
text = "Sample text"
scroll_active = false

[node name="PauseArrow" type="Sprite2D" parent="Box"]
position = Vector2( 470, 66 )
texture = ExtResource( 5 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Box/PauseArrow"]
autoplay = "Arrow"
anims/Arrow = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Box"]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="TypeDelay" type="Timer" parent="Box"]
wait_time = 0.02

[node name="Arrow" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
expand = true

[connection signal="timeout" from="Box/TypeDelay" to="." method="_on_TypeDelay_timeout"]
